# python-registerer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  LICENSE  README.md  README.template  generate_readme.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  tests.yml
docgen/: README.py  docgen.py
docs/: index.md  requirements.txt  usage.md
docs/references/: exceptions.md  registerer.md  validators.md
examples/: class-with-custom-validator.py  class.py  function-with-validator.py  function.py
fast_registry/: __init__.py  registry.py  validators.py
references/exceptions/: index.html
references/registerer/: index.html
references/validators/: index.html
registerer/: __init__.py  exceptions.py  importer.py  registry.py  validators.py
search/: search_index.json
tests/: conftest.py  test_registry.py  test_validators.py
usage/: index.html
