[tool.poetry]
name = "registerer"
version = "0.3.0"
description = "Everything you need to implement maintainable and easy to use registry patterns in your project."
authors = ["Danial Keimasi <danialkeimasi@gmail.com>"]
license = "MIT"
homepage = "https://github.com/danialkeimasi/python-registerer"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/danialkeimasi/python-registerer/issues"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
lazydocs = "^0.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
