[tool.poetry]
name = "registerer"
version = "0.0.0" # placeholder, managed by git tags.
description = "Everything you need to implement maintainable and easy to use registry patterns in your project."
authors = ["Danial Keimasi <danialkeimasi@gmail.com>"]
license = "MIT"
homepage = "https://github.com/danialkeimasi/python-registerer"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/danialkeimasi/python-registerer/issues"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"  # If you updated this, also update in .pre-commit-config.yaml
pre-commit = "2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
markdown-exec = "^1.0.0"
Pillow = "^9.3.0"
CairoSVG = "^2.5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
    "pass",

    # Don't complain about abstract methods, they aren't run:
    "@(abc.)?abstractmethod",
]
ignore_errors = true

[tool.pytest.ini_options]
norecursedirs = ".git"
pythonpath = ["."]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.autoflake]
in-place = true
expand-star-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
remove-all-unused-imports = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
